--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,12 +34,14 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-input {
-  border: solid;
-  box-shadow: none;
-}
-
-button {
+input,
+button,
+select,
+fieldset {
+  border-style: solid;
   border: none;
   box-shadow: none;
+}
+fieldset {
+  padding: 0;
 }
