--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,6 +34,11 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+* {
+  border-style: solid;
+  border-width: 0;
+}
+
 input,
 button,
 select,
